--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
-    "react-scroll-horizontal": "^1.6.6"
+    "react-scroll-horizontal": "^1.6.6",
+    "react-split-pane": "^0.1.92"
   },
   "scripts": {
     "start": "react-scripts start",
