--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.3",
     "axios": "^0.26.0",
+    "draft-js": "^0.11.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
+    "react-flow-renderer": "^10.0.8",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "react-scroll-horizontal": "^1.6.6",
