--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-flow-renderer": "^10.0.8",
+    "react-loading-overlay-ts": "^2.0.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "react-scroll-horizontal": "^1.6.6",
