--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
     "@emotion/styled": "^11.8.1",
     "@fontsource/roboto": "^4.5.3",
     "@mui/icons-material": "^5.4.2",
-    "@mui/material": "^5.4.3",
+    "@mui/material": "^5.6.2",
     "axios": "^0.26.0",
     "draft-js": "^0.11.7",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "konva": "^8.3.5",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-draft-wysiwyg": "^1.14.7",
     "react-flow-renderer": "^10.0.8",
+    "react-horizontal-scrolling-menu": "^2.7.1",
+    "react-konva": "^18.0.0-0",
     "react-loading-overlay-ts": "^2.0.0",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "^5.0.0",
-    "react-scroll-horizontal": "^1.6.6",
+    "react-scripts": "^5.0.1",
     "react-split-pane": "^0.1.92"
   },
   "scripts": {
