--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "draft-js": "^0.11.7",
     "konva": "^8.3.5",
     "react": "^18.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.0.0",
     "react-flow-renderer": "^10.0.8",
     "react-horizontal-scrolling-menu": "^2.7.1",
