--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.6.2",
     "axios": "^0.26.0",
     "draft-js": "^0.11.7",
+    "gh-pages": "^3.2.3",
     "konva": "^8.3.5",
     "react": "^18.0.0",
     "react-color": "^2.19.3",
@@ -27,7 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "echo Building... && npm run build && echo Deploying... && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
