--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.2",
     "axios": "^0.26.0",
+    "buffer": "^6.0.3",
     "draft-js": "^0.11.7",
     "gh-pages": "^3.2.3",
     "konva": "^8.3.5",
