--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-horizontal-scrolling-menu": "^2.7.1",
     "react-konva": "^18.0.0-0",
     "react-loading-overlay-ts": "^2.0.0",
+    "react-quill": "^1.3.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.1",
     "react-split-pane": "^0.1.92",
