--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.0.0",
     "react-flow-renderer": "^10.0.8",
     "react-horizontal-scrolling-menu": "^2.7.1",
+    "react-html-parser": "^2.0.2",
     "react-konva": "^18.0.0-0",
     "react-loading-overlay-ts": "^2.0.0",
     "react-quill": "^1.3.5",
